# codexagents

./: .env  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/codex_team/: __init__.py  codex_bridge.py  communication.py  config.py  orchestrator_app.py
src/codex_team.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/codex_team/agents/: __init__.py  base.py  orchestrator.py  specialist.py
