[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-team"
version = "0.1.0"
description = "Multi-agent Codex orchestration using OpenAI Agents SDK and LiteLLM proxied models"
authors = [
  {name = "Codex Multi-Agent Harness"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "litellm>=1.38.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.6",
  "websockets>=12.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
